fix(simpleTable): fixed simple table link rows with truncating

--- a/src/components/simple-table/SimpleTable.module.scss
+++ b/src/components/simple-table/SimpleTable.module.scss
@@ -83,8 +83,11 @@
 
           > a {
             display: block;
-            width: 100%;
             height: 100%;
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
             padding: 12px;
 
             &.noPadding {
